# citest

./: .travis.yml  CMakeLists.txt  library.h  test_foo.cpp
gtest/: CMakeLists.txt
scripts/travis/: build.sh  configure-cmake.sh  configure.sh  defaults.sh  install_3rdparty.sh
